# ppm2hid

./: CLA.md  CONTRIBUTING.md  Containerfile.jstest  FUTURE.md  README.md  jstest-container.md  ppm2hid.py  pyproject.toml  record_ppm.py  test_cable_reconnect.py  test_channel_sweeps.py  test_display.py  test_joystick.py  test_noise.py  test_ppm2hid.py  test_ppm_bad_cable.py  test_profile.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ppm2hid/: __init__.py  alsa.py  audio.py  cli.py  constants.py  decoder.py  display.py  profile.py  uinput.py  wizard.py
profiles/: absima_cr10p.toml  test.toml
