[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ppm2hid"
version = "0.1.0"
description = "RC transmitter PPM audio input → Linux virtual joystick via uinput"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Joan Ardiaca Jové" }]
keywords = ["RC", "PPM", "uinput", "joystick", "PipeWire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.scripts]
ppm2hid = "ppm2hid:main"

[project.urls]
Homepage = "https://github.com/jardiacaj/ppm2hid"
"Bug Tracker" = "https://github.com/jardiacaj/ppm2hid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ppm2hid*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — not enforced (some arg/format strings are inherently long)
]
